--- a/src/pages/Weather.css
+++ b/src/pages/Weather.css
@@ -23,19 +23,40 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-weight: bold;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-}
 
+  background-image: url("https://image.freepik.com/free-vector/gorgeous-clouds-background-with-blue-sky-design_1017-25501.jpg");
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.weatherLogo {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  border-radius: 25%;
+  border: none;
+}
+.h2 {
+  color: rgb(218, 208, 122);
+  float: right;
+  font-size: 58px;
+  text-align: justify;
+  margin-top: 0px;
+  cursor: pointer;
+}
 .container {
   border-radius: 25px;
   -webkit-box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
-  background-color: #222831;
   color: #ffffff;
   height: 400px;
 }
@@ -43,8 +64,8 @@ body {
 .weather-side {
   position: relative;
   height: 100%;
-  border-radius: 25px;
-  background-image: url("https://images.unsplash.com/photo-1559963110-71b394e7494d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80");
+  border-radius: 25px 10px;
+  background-image: url("");
   width: 300px;
   -webkit-box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
@@ -60,7 +81,7 @@ body {
 
 .weather-side:hover {
   -webkit-transform: scale(1.1) perspective(1500px) rotateY(10deg);
-  transform: scale(1.1) perspective(1500px) rotateY(10deg);
+  transform: scale(1) perspective(1500px) rotateY(10deg);
 }
 
 .weather-gradient {
@@ -119,7 +140,7 @@ body {
 
 .weather-desc {
   margin: 0;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 .info-side {
@@ -211,14 +232,14 @@ body {
 
 .location-button {
   outline: none;
-  width: 80%;
+  width: auto;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border: none;
+  border-radius: 25px 10px;
   padding: 10px;
   font-family: "Montserrat", sans-serif;
-  background-image: var(--gradient);
-  color: #ffffff;
+  color: #383636;
   font-weight: 700;
   -webkit-box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
   box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
@@ -231,16 +252,21 @@ body {
 }
 
 .search-button {
+  margin-left: 5px;
   -webkit-transform: scale(0.95);
   -ms-transform: scale(0.95);
   transform: scale(0.95);
-  width: 20%;
+  width: auto;
   float: left;
+  border: none transparent;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
   padding: 10px;
   background-image: var(--gradient);
   color: #ffffff;
-  border: none;
+  outline: none;
   cursor: pointer;
+  border-radius: 25px 10px;
 }
 
 .location-button .feather {
