--- a/src/pages/Weather.css
+++ b/src/pages/Weather.css
@@ -274,3 +274,13 @@ body {
   width: auto;
   margin-right: 5px;
 }
+.fav-button {
+  background: none;
+  border: none;
+  font-size: 28px;
+  float: right;
+  margin: 20px 20px 0px 0px;
+}
+.fav_bg {
+  background-color: rgb(235, 235, 81);
+}
