--- a/src/pages/Weather.css
+++ b/src/pages/Weather.css
@@ -42,15 +42,16 @@ body {
   position: relative;
   width: 250px;
   height: 250px;
-  border-radius: 25%;
+  margin: 20px;
   border: none;
+  cursor: pointer;
 }
 .h2 {
   color: rgb(218, 208, 122);
   float: right;
-  font-size: 58px;
+  font-size: 54px;
   text-align: justify;
-  margin-top: 0px;
+  margin-top: 185px;
   cursor: pointer;
 }
 .container {
@@ -101,10 +102,6 @@ body {
   left: 25px;
 }
 
-.date-dayname {
-  margin: 0;
-}
-
 .date-day {
   display: block;
 }
@@ -135,7 +132,7 @@ body {
 .weather-temp {
   margin: 0;
   font-weight: 700;
-  font-size: 4em;
+  font-size: 3em;
 }
 
 .weather-desc {
@@ -176,12 +173,11 @@ body {
   margin: 10px 35px;
   -webkit-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
   box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  background: black;
+  border-radius: 25px 10px;
+  background: transparent;
 }
 
 .week-list > li {
-  float: left;
   padding: 15px;
   cursor: pointer;
   -webkit-transition: 200ms ease;
@@ -199,11 +195,13 @@ body {
   -webkit-box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
 }
+.week-list :hover {
+  background: #fff;
+}
 
 .week-list > li.active {
-  background: #fff;
   color: #222831;
-  border-radius: 10px;
+  border-radius: 25px 10px;
 }
 
 .week-list > li .day-name {
@@ -214,7 +212,7 @@ body {
 
 .week-list > li .day-icon {
   display: block;
-  height: 30px;
+
   width: auto;
   margin: 0 auto;
 }
@@ -249,6 +247,7 @@ body {
   transition: transform 200ms ease;
   transition: transform 200ms ease, -webkit-transform 200ms ease;
   float: left;
+  text-transform: capitalize;
 }
 
 .search-button {
@@ -280,7 +279,4 @@ body {
   font-size: 28px;
   float: right;
   margin: 20px 20px 0px 0px;
-}
-.fav_bg {
-  background-color: rgb(235, 235, 81);
 }
